added animation to project page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"> -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link href="css/hover-min.css" rel="stylesheet" media="all">
 		<link rel="stylesheet" type="text/css" href="/css/style.css">
 
 
@@ -47,5 +48,6 @@
 	<!-- Mixitup JS -->
 	<script type="text/javascript" src="js/jQuery/lettering.min.js"></script>
 	<script src="js/jQuery/textillate.js"></script>
+
 	</body>
 </html>
